[package]
name = "lcpc-2d"
version = "0.1.1"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "polynomial commitment scheme from linear codes"
license = "Apache-2.0"
repository = "https://github.com/conroi/lcpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest.workspace = true
err-derive.workspace = true
ff.workspace = true
merlin.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
bincode.workspace = true
blake3.workspace = true
fffft.workspace = true
itertools.workspace = true
lcpc-test-fields.workspace = true
