[package]
name = "lcpc-test-fields"
version = "0.1.1"
edition = "2018"
authors = ["kwantam <kwantam@gmail.com>"]
description = "fields for testing polycommits"
license = "Apache-2.0"
repository = "https://github.com/conroi/lcpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec.workspace = true
byteorder.workspace = true
ff = { workspace = true, features = ["derive"] }
ff-derive-num.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
subtle.workspace = true
