[package]
name = "lcpc2d"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "polynomial commitment scheme from linear codes"
license = "Apache-2.0"
repository = "https://github.com/kwantam/lcpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.2"
digest = "0.9"
fffft = "0.2"
merlin = "2.0"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.4"
serde = { version = "1.0.106", features = ["derive"] }

[dev-dependencies]
bitvec = "0.20"
byteorder = "1"
ff = { version = "0.9", features = ["derive"] }
itertools = "0.9"
rand_core = "0.6"
rug = "1"
rug-fft = "0.1"
sha3 = "0.9"
subtle = "2.2"
