[package]
name = "lcpc2d"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "polynomial commitment scheme from linear codes"
license = "Apache-2.0"
repository = "https://github.com/kwantam/lcpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.9"
err-derive = "0.2"
ff = "0.10"
merlin = "2.0"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
bincode = "1.3"
blake3 = { version = "1", features = ["traits-preview"] }
fffft = "0.4"
itertools = "0.10"
test-fields = { path = "../test-fields" }
