[package]
name = "ligero-pc"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "polynomial commitment scheme from R-S codes, as in Ligero (CCS '17)"
license = "Apache-2.0"
repository = "https://github.com/kwantam/lcpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fffft = "0.2"
lcpc2d = { path = "../lcpc2d" }
serde = { version = "1.0.106", features = ["derive"] }

[dev-dependencies]
bitvec = "0.20"
byteorder = "1"
ff = { version = "0.9", features = ["derive"] }
itertools = "0.9"
merlin = "2.0"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha3 = "0.9"
subtle = "2.2"
