[package]
name = "ligero-pc"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "polynomial commitment scheme from R-S codes, as in Ligero (CCS '17)"
license = "Apache-2.0"
repository = "https://github.com/kwantam/lcpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fffft = "0.4"
lcpc2d = { path = "../lcpc2d" }
typenum = "1.13"

[dev-dependencies]
bincode = "1.3"
blake3 = { version = "1", features = ["traits-preview"] }
ff = "0.10"
flate2 = "1.0"
itertools = "0.10"
merlin = "2.0"
paste = "1.0"
rand = "0.8"
rand_chacha = "0.3"
test-fields = { path = "../test-fields" }

[features]
bench = []
isz = []
hlf = []
