[package]
name = "sdig-pc"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "polynomial commitment scheme from SDIG expander code"
license = "Apache-2.0"
repository = "https://github.com/kwantam/lcpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.10"
fffft = "0.4"
itertools = "0.10"
ndarray = ">=0.11.0,<0.15"
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.5"
sprs = "0.10"

[dev-dependencies]
bitvec = "0.22"
byteorder = "1"
ff = { version = "0.10", features = ["derive"] }
ff-derive-num = "0.1"
num-traits = "0.2"
rand_core = "0.6"
subtle = "2.2"
