[package]
name = "sdig-pc"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "polynomial commitment scheme from SDIG expander code"
license = "Apache-2.0"
repository = "https://github.com/conroi/lcpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.10"
itertools = "0.10"
lcpc2d = { path = "../lcpc2d" }
ndarray = ">=0.11.0,<0.15"
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.5"
sprs = "0.10"
typenum = "1.13"

[dev-dependencies]
bincode = "1.3"
blake3 = { version = "1", features = ["traits-preview"] }
merlin = "2.0"
paste = "1.0"
test-fields = { path = "../test-fields" }

[features]
bench = []
